{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Fish",
            "id": "0884fb35-7406-4f04-b425-5d72391ea42f",
            "actions": [
                {
                    "name": "PressButtonSouth",
                    "type": "Button",
                    "id": "10a4bde5-8e11-42d4-91c9-71fda5e955de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeftStick",
                    "type": "Value",
                    "id": "45076340-88e1-4e88-b55a-51cdcad41d12",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8417cf79-4c52-4130-97bb-d253740c56a7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PressButtonSouth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d980c89-e5aa-4e36-b33f-6438819e99cb",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveLeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "f45ef3a7-f1f4-47ed-91cd-5f81e81eb0a0",
            "actions": [
                {
                    "name": "PressSpace",
                    "type": "Button",
                    "id": "4579f1ae-9aac-4bdd-967f-df5f1fb354f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "606cb066-253b-4ed8-84bc-489568eb6cd7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressSpace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Tower",
            "id": "774c61dd-cfd4-486c-b54b-9d1693d4e41f",
            "actions": [
                {
                    "name": "MoveStick",
                    "type": "Button",
                    "id": "ee2592c5-197e-46fc-951a-6fc4146e5bcf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressDPad",
                    "type": "Button",
                    "id": "5708cd1f-bce6-4abd-90b0-9956e0d21c2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EnableShooting",
                    "type": "Button",
                    "id": "c4d74f5d-1c96-4b49-85c4-8bf60e78833a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e2badcbe-93c5-4550-a3e7-72b51f5fe2c4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91930aca-c76b-4b1c-8f03-fccbc0f49852",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d81b116f-76d3-43d9-8cb1-e4ff7ce604f6",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressDPad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f805fc8-33ee-43c7-90c4-821d52628e89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "EnableShooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91f2cb59-974a-42d2-866e-5b32289225db",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "EnableShooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuPlayer",
            "id": "737271fd-c00e-421f-bd97-fe7ac8072e5a",
            "actions": [
                {
                    "name": "SwitchRole",
                    "type": "Button",
                    "id": "36a2078f-0b0e-4192-a5b9-483ddc7ea998",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockRole",
                    "type": "Button",
                    "id": "c7e37bfa-6f1a-4bcc-81e0-99bb5d167623",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ce48832-03a4-4f85-9699-002481fad12c",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SwitchRole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c73d0e5-d80a-4c99-bed2-a7536b4f3c8f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LockRole",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}